<resources>
    <string name="app_name">RemindMe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="title">Title</string>
    <string name="place">Place</string>
    <string name="time">Time</string>
    <string name="later">Later</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="add">Add</string>
    <string name="category">Category</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="id">Id</string>
    <string name="description">Description</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="add_task">Add Task</string>
    <string name="categories">Categories</string>
    <string name="trend">Trend</string>
    <string name="end_date">End Date</string>
    <string name="end_time">EndTime</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="name">Name</string>
    <string name="new_category">New Category</string>
    <string name="cancel">Cancel</string>
    <string name="task_informations">Task Informations</string>
    <string name="priority">Priority</string>
    <string name="priority_value">Priority Value</string>
    <string name="search">Search</string>
    <string name="delete_forever">Delete Forever</string>
    <string name="navigation">Navigation</string>
    <string name="restore">Restore</string>
    <string name="info">Info</string>
    <string name="delete_category_message">Some tasks are still linked to this category.\nDo you want to delete the category and the respective tasks?</string>
    <string name="modify">Modify</string>
    <string name="add_task_category">Add task category</string>
    <string name="set_task_date">Set task date</string>
    <string name="set_task_time">Set task time</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="failed">Failed</string>
    <string name="notification_status">Notification Status</string>
    <string name="notification">Notification</string>
    <string name="wrong_date_mesage">The end date cannot be before the start date</string>
    <string name="total_tasks">Total Tasks</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="last_week">Last Week</string>
    <string name="last_year">Last Year</string>
    <string name="remindme">RemindMe</string>
</resources>
