<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TrendActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18dp"
            android:text="@string/total_tasks"/>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pie_chart_tasks"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="16dp">
        </com.github.mikephil.charting.charts.PieChart>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18dp"
            android:text="@string/completed_tasks"/>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pie_chart_done_tasks"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="16dp">
        </com.github.mikephil.charting.charts.PieChart>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18dp"
            android:text="@string/last_week"/>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bar_chart_week"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="16dp">
        </com.github.mikephil.charting.charts.BarChart>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18dp"
            android:text="@string/last_year"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/line_chart_year"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="16dp">
        </com.github.mikephil.charting.charts.LineChart>

    </LinearLayout>

</ScrollView>